--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
 
     </section><!-- End Team Section -->
 
-    <!----------------------------- Clients Section ======= -->
+    <!---------------------- Clients Section ---------------- -->
     <section id="clients" class="clients">
 
       <div class="container" data-aos="fade-up">
@@ -1227,10 +1227,11 @@
         </div>
       </div>
 
-    </section><!-- End Clients Section -->
+    </section>
+    <!----------------------End Clients Section--------------- -->
 
 
-    <!-- ======= Contact Section ======= -->
+    <!--------------------- Contact Section ----------------- -->
     <section id="contact" class="contact">
 
       <div class="container" data-aos="fade-up">
