fully completed the  more clients section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h2>Our Values</h2>
-          <p>Our customers are our first prority</p>
+          <p>Our customers are our first priority</p>
         </header>
 
         <div class="row">
@@ -189,7 +189,7 @@
               <p class="text-start">
                 Globe stationers Limited is fully Ugandan
                 owned and managed.The management has a
-                wealth of experience and are delicated to
+                wealth of experience and are dedicated to
                 providing our customers with the most
                 innovative solutions to meet their business
                 needs
@@ -202,11 +202,11 @@
               <img src="assets/img/values-2.png" class="img-fluid" alt="" />
               <h3>Our Mission</h3>
               <p class="text-start">
-                To execel in customer care and services with
-                percision,commitement,loayality,integrity
+                To excel in customer care and services with
+                precision,commitment,loyalty,integrity
                 and meticulous professionalism.we intend to
-                offer clients with the ultimate satifactory
-                service,economicaly,viable and competitive
+                offer clients with the ultimate satisfactory
+                service,economically,viable and competitive
                 prices yet never comprising on quality.
               </p>
             </div>
@@ -218,11 +218,11 @@
               <h3>Our Vision</h3>
               <p class="text-start">
                 To provide the best services so that our
-                clients become ambassodars to their next
+                clients become ambassadors to their next
                 client through their beautiful
-                testimonies.To deliever a reliable,efficinct
-                printing and publisning service and high
-                quality staionery,ICT and promtiona
+                testimonies.To deliver a reliable,efficient
+                printing and publishing service and high
+                quality stationery,ICT and promoting
                 supplies.
               </p>
             </div>
@@ -1219,14 +1219,24 @@
           <h3 class="text-black mt-2  fs-6 fw-light">More of our clients</h3>
         </header>
         <div class="container">
-          <div class=" row row-cols-2 row-cols-md-8 row-cols-sm-2">
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
-            <div class="col"><img src="./assets/img/clients/cleint-21.png" alt=""></div>
+          <div class="row row-cols-1 row-cols-md-6 row-cols-sm-2">
+            <div class="col"><img src="./assets/img/clients/cleint-21.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-23.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-22.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-24.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-25.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-26.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-27.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-28.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-29.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-30.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-14.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-15.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-16.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-17.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-18.png" class="img-fluid alt=""></div>
+            <div class=" col"><img src=" ./assets/img/clients/client-19.png" class="img-fluid alt=""></div>
+                      
           </div>
         </div>
       </div>
@@ -1234,96 +1244,97 @@
     <!----------------------End Clients Section--------------- -->
 
     <!--------------------- Contact Section ----------------- -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-        <header class="section-header">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
-        </header>
+    <section id=" contact" class="contact">
+              <div class="container" data-aos="fade-up">
+                <header class="section-header">
+                  <h2>Contact</h2>
+                  <p>Contact Us</p>
+                </header>
 
-        <div class="row gy-4">
-          <div class="col-lg-6">
-            <div class="row gy-4">
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-geo-alt"></i>
-                  <h3>Address</h3>
-                  <p>
-                    Plot 1-3 Naser Road,<br />2nd Floor,
-                    Room Room-E04 <br />Printers Miracle
-                    Center Building
-                  </p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>
-                    +256 771-896869<br />+256 701-896869
-                    <br />+256 782-396351
-                  </p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>
-                    globestationers2006@gmail.com<br />contact@example.com
-                  </p>
-                  <p></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>
-                    Monday - Friday<br />9:00AM -
-                    05:00PM
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
-              <div class="row gy-4">
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required />
-                </div>
-
-                <div class="col-md-6">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required />
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required />
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank
-                    you!
+                <div class="row gy-4">
+                  <div class="col-lg-6">
+                    <div class="row gy-4">
+                      <div class="col-md-6">
+                        <div class="info-box">
+                          <i class="bi bi-geo-alt"></i>
+                          <h3>Address</h3>
+                          <p>
+                            Plot 1-3 Naser Road,<br />2nd Floor,
+                            Room Room-E04 <br />Printers Miracle
+                            Center Building
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="info-box">
+                          <i class="bi bi-telephone"></i>
+                          <h3>Call Us</h3>
+                          <p>
+                            +256 771-896869<br />+256 701-896869
+                            <br />+256 782-396351
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="info-box">
+                          <i class="bi bi-envelope"></i>
+                          <h3>Email Us</h3>
+                          <p>
+                            globestationers2006@gmail.com<br />contact@example.com
+                          </p>
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="info-box">
+                          <i class="bi bi-clock"></i>
+                          <h3>Open Hours</h3>
+                          <p>
+                            Monday - Friday<br />9:00AM -
+                            05:00PM
+                          </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
 
-                  <button type="submit">
-                    Send Message
-                  </button>
+                  <div class="col-lg-6">
+                    <form action="forms/contact.php" method="post" class="php-email-form">
+                      <div class="row gy-4">
+                        <div class="col-md-6">
+                          <input type="text" name="name" class="form-control" placeholder="Your Name" required />
+                        </div>
+
+                        <div class="col-md-6">
+                          <input type="email" class="form-control" name="email" placeholder="Your Email" required />
+                        </div>
+
+                        <div class="col-md-12">
+                          <input type="text" class="form-control" name="subject" placeholder="Subject" required />
+                        </div>
+
+                        <div class="col-md-12">
+                          <textarea class="form-control" name="message" rows="6" placeholder="Message"
+                            required></textarea>
+                        </div>
+
+                        <div class="col-md-12 text-center">
+                          <div class="loading">Loading</div>
+                          <div class="error-message"></div>
+                          <div class="sent-message">
+                            Your message has been sent. Thank
+                            you!
+                          </div>
+
+                          <button type="submit">
+                            Send Message
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
-            </form>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- -------------------End Contact Section--------------- -->
   </main>
