added  padding  and text-start to the p tag in clients section

--- a/index.html
+++ b/index.html
@@ -1176,11 +1176,10 @@
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h2>Our Clients</h2>
-          <p>
-            Global Stationers deals with clients ranging from
-            schools, NGO, government etc
+          <p class="text-start py-3">
+            Global Stationers deals with clients ranging from schools, NGO, government etc
           </p>
-          <h3 class="text-start  text-muted">These are some clients we have worked with;</h3>
+          <h3 class=" text-start text-muted fw-light fs-6">These are some clients we have worked with;</h3>
         </header>
 
         <div class="clients-slider swiper">
@@ -1235,8 +1234,7 @@
             <div class=" col"><img src=" ./assets/img/clients/client-16.png" class="img-fluid alt=""></div>
             <div class=" col"><img src=" ./assets/img/clients/client-17.png" class="img-fluid alt=""></div>
             <div class=" col"><img src=" ./assets/img/clients/client-18.png" class="img-fluid alt=""></div>
-            <div class=" col"><img src=" ./assets/img/clients/client-19.png" class="img-fluid alt=""></div>
-                      
+            <div class=" col"><img src=" ./assets/img/clients/client-19.png" class="img-fluid alt=""></div>        
           </div>
         </div>
       </div>
