modified the service section in the index.html file

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   </section>
   <!-- End Hero -->
 
+  <!------------------------Start #main---------------- --------->
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -587,25 +588,25 @@
     </section>
     <!-- End Features Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ---------Services Section -------->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h2>Services</h2>
           <p>
-            Veritatis et dolores facere numquam et praesentium
+            We offer various services to our clients.These include some of the following
           </p>
         </header>
 
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-box blue">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Nesciunt Mete</h3>
-              <p>
-                Provident nihil minus qui consequatur non
-                omnis maiores. Eos accusantium minus dolores
-                iure perferendis tempore et consequatur.
+              <img src="./assets/img/services/digital-printing.png" alt=""
+                style="width: 16rem; height: 10rem;  margin: 0.5rem;">
+              <h3>Digital Printing</h3>
+              <p class="text-start">
+                Digital printing is one of the our major service that we do offer at GSL.These services include
+                certificates,posters,stickers,notepads,flyers and tyre covers.
               </p>
               <a href="#" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
@@ -614,12 +615,12 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-box orange">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Eosle Commodi</h3>
-              <p>
-                Ut autem aut autem non a. Sint sint sit
-                facilis nam iusto sint. Libero corrupti
-                neque eum hic non ut nesciunt dolorem.
+              <img src="./assets/img/services/commerical-printing.png" alt=""
+                style="width: 16rem; height: 10rem; margin: 0.5rem;">
+              <h3>Commerial Printing/Design</h3>
+              <p class="text-start">
+                There do offer printing for the following Posters,Documents,Magazines,Presentation
+                Folders,Catalogue,Flyers,Wall Calendars,Planos,Table Calendars,Dairies and Shortrun Book Printing.
               </p>
               <a href="#" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
@@ -628,12 +629,13 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-box green">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Ledo Markt</h3>
-              <p>
-                Ut excepturi voluptatem nisi sed. Quidem
-                fuga consequatur. Minus ea aut. Vel qui id
-                voluptas adipisci eos earum corrupti.
+              <img src="./assets/img/services/largeFormat.png" alt=""
+                style="width: 16rem; height: 10rem;  margin: 0.5rem;">
+              <h3>Large Format | Banner Printing |Signage</h3>
+              <p class="text-start">
+                These is one of the major services that we do offer to our clients.These include printing on
+                Billboards,Pop
+                up Banners,Stickers,Tear drops,Flags and Wall signs
               </p>
               <a href="#" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
@@ -642,12 +644,12 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-box red">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Asperiores Commodi</h3>
-              <p>
-                Non et temporibus minus omnis sed dolor esse
-                consequatur. Cupiditate sed error ea fuga
-                sit provident adipisci neque.
+              <img src="./assets/img/services/promtional-branding.png" alt=""
+                style="width: 16rem; height: 10rem;  margin: 0.5rem;">
+              <h3>Promotional Materials/Branding</h3>
+              <p class="text-start">
+                We provide several promotional materials to clients which inclde gift/paper bags,T-shirts,Branded
+                clocks,key holders,Branded bags,snap frames,Branded Pens,Caos,Mini pull ups and umbrellas
               </p>
               <a href="#" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
@@ -656,26 +658,25 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-box purple">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Velit Doloremque.</h3>
-              <p>
-                Cumque et suscipit saepe. Est maiores autem
-                enim facilis ut aut ipsam corporis aut. Sed
-                animi at autem alias eius labore.
+              <img src="./assets/img/services/screen-printing.png" alt=""
+                style=" width: 16rem; height: 10rem; margin: 0.5rem;">
+              <h3>Screen Printing</h3>
+              <p class="text-start">
+                We offer screen printing on t-shirts, pens,umbremalla and many other things.These screen prints are
+                mainly orginational logos,visions, mission and any words needed to be printed.
               </p>
-              <a href="#" class="read-more"><span>Read More</span>
+              <a href=" #" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
             <div class="service-box pink">
-              <i class="ri-discuss-line icon"></i>
-              <h3>Dolori Architecto</h3>
-              <p>
-                Hic molestias ea quibusdam eos. Fugiat enim
-                doloremque aut neque non et debitis iure.
-                Corrupti recusandae ducimus enim.
+              <img src="./assets/img/services/stationary.png" alt=""
+                style=" width: 16rem; height: 10rem; margin: 0.5rem;">
+              <h3>Stationary</h3>
+              <p class="text-start">
+                We offer several stationaries to our dear clients which include ream,books,pens,pencils and textbooks
               </p>
               <a href="#" class="read-more"><span>Read More</span>
                 <i class="bi bi-arrow-right"></i></a>
@@ -684,8 +685,8 @@
         </div>
       </div>
     </section>
-    <!-- End Services Section -->
-    
+    <!--------------------- End Services Section------------ -->
+
     <!-- -----------------F.A.Q Section -------------------- -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
@@ -1393,7 +1394,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
 
