--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>GSL - Index</title>
+    <title>GSL - Services</title>
     <meta content="" name="description" />
 
     <meta content="" name="keywords" />
@@ -97,6 +97,18 @@
     </header>
     <!-- --------------------End Header------------------ -->
 
+    <!-- ======= home Section ======= -->
+    <section id="home" class="d-flex align-items-center"></section>
+    <!-- End Hero -->
+
+    <!------------------------Start #main---------------- --------->
+
+    <!------------------------Start #main---------------- --------->
+    <main id="main">
+        
+    </main>
+    <!------------------------ End #main---------------- --------->
+
     <!----------------------- Footer --------------------------- -->
     <footer id="footer" class="footer">
         <div class="footer-newsletter">
@@ -105,7 +117,7 @@
                     <div class="col-lg-12 text-center">
                         <h4>Our Newsletter</h4>
                         <p>
-                            Subscribe to our new Letter to get the lastest
+                            Subscribe to our new Letter to get the latest
                             updates on our products
                         </p>
                     </div>
