--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>Who We Are</h3>
-              <h2>Globe Stationaries Limited</h2>
+              <h2>Globe Stationeries Limited</h2>
               <p>
-                We are a well estabished and registed
+                We are a well established and registered
                 Ugandan company , pre-qualified with
-                Goverment Ministries,Diplomatic Missions,Non
-                government Organisations and registed with
+                Government Ministries,Diplomatic Missions,Non
+                government Organizations and registered with
                 PDA.<br />
-                We also registed by the United Nations under
-                Unitws Nations global market.<br />
+                We are also registered by the United Nations under
+                United Nations global market.<br />
                 <b>We are located on Plot 1-3 on Naser
                   Road 2nd Floor Room-E04</b>
               </p>
@@ -685,7 +685,7 @@
       </div>
     </section>
     <!-- End Services Section -->
-    
+
     <!-- -----------------F.A.Q Section -------------------- -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
