added digital printing section in the service.html file

--- a/services.html
+++ b/services.html
@@ -97,14 +97,41 @@
     </header>
     <!-- --------------------End Header------------------ -->
 
-    <!-- ======= home Section ======= -->
+    <!-- -------------- home Section --------------------- -->
     <section id="home" class="d-flex align-items-center"></section>
-    <!-- End Hero -->
+    <!-- -------------------Home Section------------------- -->
 
-    <!------------------------Start #main---------------- --------->
 
     <!------------------------Start #main---------------- --------->
     <main id="main">
+        <!-- Start Digital Printing Section -->
+        <section class="service-section">
+            <header class="section-header">
+                <h2>Digital Printing</h2>
+                <p>Digital Printing is one of our major services offered at Global Stationers Limited</p>
+            </header>
+            <div class="container px-4 py-4">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img src="./assets/img/services/digital-printing.png" alt="digital Printing image"
+                            style="height: 20rem; width: 17rem;">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Some of services offered under digital Printing</p>
+                        <ul class="fs-3" style="list-style-type: square;">
+                            <li>Certificates</li>
+                            <li>Posters</li>
+                            <li>Stickers</li>
+                            <li>Notepads</li>
+                            <li>Flyers</li>
+                            <li>Tyre Covers</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6"></div>
+                </div>
+            </div>
+        </section>
+        <!-- End Digital Printing Section ---->
 
     </main>
     <!------------------------ End #main---------------- --------->
