added part of code of the commercial design section

--- a/services.html
+++ b/services.html
@@ -101,7 +101,6 @@
     <section id="home" class="d-flex align-items-center"></section>
     <!-- -------------------Home Section------------------- -->
 
-
     <!------------------------Start #main---------------- --------->
     <main id="main">
         <!-- Start Digital Printing Section -->
@@ -132,6 +131,19 @@
             </div>
         </section>
         <!-- End Digital Printing Section ---->
+
+        <!-- Start commercial-printing section  -->
+        <section class="service-section container-fluid">
+            <header class="section-header">
+                <h2>Commercial Printing or Design </h2>
+                <p>
+                    We offer you all major designs and printings.
+                </p>
+            </header>
+
+
+        </section>
+        <!-- End commercial-printing section  -->
 
     </main>
     <!------------------------ End #main---------------- --------->
