fixedd the equipment fashion

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </header>
        
         <!-- slider images -->
-        <div id="demo" class="carousel slide" data-ride="carousel" style="width:700px">
+        <div id="demo" class="carousel slide w3-center" data-ride="carousel" >
           <ul class="carousel-indicators">
             <li data-target="#demo" data-slide-to="0" class="active"></li>
             <li data-target="#demo" data-slide-to="1"></li>
@@ -254,24 +254,38 @@
           </ul>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/equipments/11.jpg" alt="Los Angeles" width="1100" height="500">
+              <img src="assets/img/equipments/heavyprinter.png" alt="Los Angeles" width="600" height="400">
               <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in LA!</p>
+                <p style="color:black;font-family: cursive;font-size:18px;font-weight:bold;">Heavy Duty Printer</p>
+                <!-- <p>We had such a great time in LA!</p> -->
               </div>   
             </div>
             <div class="carousel-item">
-              <img src="assets/img/equipments/plotter.png" alt="Chicago" width="1100" height="500">
+              <img src="assets/img/equipments/paper-cutting-machine.png" alt="Chicago" width="600" height="400">
               <div class="carousel-caption">
-                <h3>Chicago</h3>
-                <p>Thank you, Chicago!</p>
+                <p style="color:black;font-family: cursive;font-size:18px;font-weight:bold;">Paper Cutting Machine</p>
+                <!-- <p>Thank you, Chicago!</p> -->
               </div>   
             </div>
             <div class="carousel-item">
-              <img src="assets/img/equipments/printer.jpeg" alt="New York" width="1100" height="500">
+              <img src="assets/img/equipments/perfect_binding.jpeg" alt="New York" width="600" height="400">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <p style="color:black;font-family: cursive;font-size:18px;font-weight:bold;">Perfect Binding Machine</p>
+                <!-- <p>We love the Big Apple!</p> -->
+              </div>   
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/equipments/platemaking.png" alt="New York" width="600" height="400">
+              <div class="carousel-caption">
+                <p style="color:black;font-family: cursive;font-size:18px;font-weight:bold;">Plate Making Machine</p>
+                <!-- <p>We love the Big Apple!</p> -->
+              </div>   
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/equipments/stamp.png" alt="New York" width="600" height="400">
+              <div class="carousel-caption">
+                <p style="color:black;font-family: cursive;font-size:18px;font-weight:bold;">Stamp Making Machine</p>
+                <!-- <p>We love the Big Apple!</p> -->
               </div>   
             </div>
           </div>
