testimonies worked on

--- a/index.html
+++ b/index.html
@@ -696,13 +696,12 @@
                   <i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget
-                  id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                 Globe Stationers is indeed a company of professionals who are so determined to delivery their best when contacted
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="" />
                   <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h4> &amp; </h4>
                 </div>
               </div>
             </div>
@@ -718,13 +717,12 @@
                   <i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram
-                  velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                 "They have worked very well on my Workers  t-shirits , i will always work in partnership with globe stationers"
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="" />
                   <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <!-- <h4>Designer</h4> -->
                 </div>
               </div>
             </div>
@@ -740,13 +738,12 @@
                   <i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram
-                  duis noster aute amet eram fore quis sint minim.
+                  "Am glad for your quality serives in supplying of goods". 
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="" />
                   <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <!-- <h4>Store Owner</h4> -->
                 </div>
               </div>
             </div>
@@ -762,13 +759,12 @@
                   <i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam
-                  ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  "I am also confident when I contact globe  for they give better services "
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="" />
                   <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <!-- <h4>Freelancer</h4> -->
                 </div>
               </div>
             </div>
@@ -784,13 +780,12 @@
                   <i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa
-                  nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                 "I trust the works of Globe , and I will always refer other people to you , for your services are a class above"
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="" />
                   <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <!-- <h4>Entrepreneur</h4> -->
                 </div>
               </div>
             </div>
