added a background image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top">
+  <header id="header" class="header fixed-top w3-white">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/GSL-logo.png" alt="logo for GSL" />
@@ -71,14 +71,16 @@
   <!-- End Header -->
 
   <!-- ======= home Section ======= -->
-  <section id="home" class="hero d-flex align-items-center">
+  <section id="home" class="hero d-flex align-items-center" style="background-image:url('assets/img/3.jpg');background-size:cover;">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center">
+      <div class="row"  >
+        
+      
+        <div class="col-lg-10 d-flex flex-column justify-content-center" style="color:white">
           <!-- <h1 data-aos="fade-up" style="font-size:30px;" data-aos-delay="400">
             We offer modern solutions for growing your business.
           </h1> -->
-          <h1 style="font-size:30px;" data-aos="fade-up" data-aos-delay="400">
+          <h1 style="font-size:40px;color: white;text-transform: uppercase;" data-aos="fade-up" data-aos-delay="400">
             We are a company of professional business men and suppliers for growing your business
           </h1>
           <p data-aos="fade-up" data-aos-delay="500" class="mt-4"  >
@@ -99,9 +101,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+        <!-- <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
           <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -1075,10 +1077,13 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
+            <form action="#" method="post" class="php-email-form">
               <div class="row gy-4">
+                <div class="w3-center">
+                  <h2>Send Quotation</h2>
+                </div>
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required />
+                  <input type="text" name="name" class="form-control" placeholder="Comany Name" required />
                 </div>
 
                 <div class="col-md-6">
